src/app/post/components/post-list/post-list.component.scss
@import '../../../../assets/scss/color';
@import '../../../../assets/scss/typography';
@import '../../../../assets/scss/shapes';
@import '../../../../assets/scss/breakpoint';

.section-container {
  background: $grey-6;
  min-height: 68vh;
  width: 100%;
  .row-border {
    border-bottom: 1px dashed $grey-4;
    padding-bottom: 16px;
  }
  h2 {
    font-style: italic !important;
    text-transform: uppercase;
  }
}
h2 {
  font-style: italic !important;
  text-transform: uppercase;
}

.last-child {
  ::ng-deep .post {
    border: 0;
  }
}
.list-container {
  @media #{$tablet} {
    width: 100%;
  }

  h2 {
    @media #{$large-phone} {
      @include cn-bold-22;
    }
    @include cn-bold-28;
    color: $grey-2;
    margin: 0;
  }
  .columnPosts {
    @media #{$large-phone} {
      display: none !important;
    }
    width: 50%;
  }

  @mixin big-container {
    grid-column: 1 / span 12;
    ::ng-deep .post {
      flex-direction: row !important;
      .title {
        @include cn-regular-32;
      }
    }
    ::ng-deep .post .imageContainer {
      margin-right: 36px !important;
      margin-bottom: unset !important;
      .image {
        height: 40vw;
        max-height: 320px;
        @media #{$news-max} {
          height: unset;
          max-height: unset;
        }
      }
    }
  }

  @mixin small-container {
    margin-right: unset; // remove margin from other cotnainers
    grid-column: 1 / span 12;
    ::ng-deep .post {
      flex-direction: column !important;
      .title {
        @include cn-regular-32;
      }
    }
    ::ng-deep .post .imageContainer {
      margin-right: unset !important;
      margin-bottom: 36px !important;
    }
    @media #{$news-max} {
      ::ng-deep .post .imageContainer .image {
        height: unset;
        max-height: unset;
      }
    }
  }

  @mixin twin-container($start) {
    margin-right: 40px;
    grid-column: $start / span 6;
    ::ng-deep .post .imageContainer .image {
      height: 40vw;
      max-height: 250px;
    }
    @media #{$news-max} {
      margin-right: unset;
    }
  }

  @mixin triple-container-first {
    margin-right: 40px;
    grid-column: 1 / span 4;
    ::ng-deep .post .imageContainer .image {
      height: 40vw;
      max-height: 180px;
    }
    @media #{$news-max} {
      margin-right: unset;
    }
  }
  @mixin triple-container {
    margin-right: 40px;
    grid-column: span 4;
    ::ng-deep .post .imageContainer .image {
      height: 40vw;
      max-height: 180px;
    }
    @media #{$news-max} {
      margin-right: unset;
    }
  }

  .posts-container {
    display: grid;
    padding: 4vmin 0;
    grid-template-columns: repeat(auto-fill, minmax(7%, 1fr));
    grid-column-gap: 1%;
    grid-row-gap: 40px;
    .col:nth-child(6n + 1) {
      @include big-container;
      @media #{$news-max} {
        @include small-container;
      }
      @media #{$large-phone} {
        @include small-container;
      }
    }
    .col:nth-child(6n + 2) {
      @include triple-container-first;
      @media #{$news-max} {
        @include twin-container(1);
      }
      @media #{$large-phone} {
        @include small-container;
      }
    }
    .col:nth-child(6n + 3) {
      @include triple-container;
      @media #{$news-max} {
        @include twin-container(7);
      }
      @media #{$large-phone} {
        @include small-container;
      }
    }
    .col:nth-child(6n + 4) {
      @include triple-container;
      @media #{$news-max} {
        @include small-container;
      }
      @media #{$large-phone} {
        @include small-container;
      }
    }
    .col:nth-child(6n + 5) {
      @include twin-container(1);
      @media #{$large-phone} {
        @include small-container;
      }
    }
    .col:nth-child(6n + 6) {
      @include twin-container(7);
      @media #{$large-phone} {
        @include small-container;
      }
    }
  }
}
.project-container {
  &.desktop {
    @media #{$tablet} {
      display: none !important;
    }
  }
  &.mobile {
    display: none !important;
    @media #{$tablet} {
      display: flex !important;
      width: 100%;
    }
  }
  width: 20%;
  height: 100%;
  min-width: 306px;
  @include background-hash($secondary-color);
  border: 1px solid $secondary-color;
  border-radius: 6px;
  .background-project-container {
    width: 100%;
    height: 100%;
    background: $white;
    border-radius: 6px;
    .project-content {
      @media #{$large-phone} {
        padding: 38px 32px 14px 36px;
      }
      padding: 39px 32px 26px 36px;
      fill: $secondary-color;
      stroke: $secondary-color;
      &.mobile {
        text-align: left;
      }
      text-align: center;
      h2 {
        @media #{$large-phone} {
          @include cn-bold-22;
        }
        @include cn-bold-26;
        color: $secondary-color;
        margin-bottom: 0;
      }
    }
  }
}
.tag {
  background: $grey-3;
  color: $white;
  border-radius: 20px;
  cursor: pointer;
  margin-bottom: 10px;
  padding: 0 20px;
  p {
    margin-top: 0;
    margin-bottom: 0;
  }
}

